# halloween-game-2025

./: .gitignore  pyproject.toml
.github/: copilot-instructions.md
docs/: game-sprites.html  index.html  styles.css
docs/js/: main.js  soundscape.js  spectral-game.js
src/: hello_world.py
tests/: test_hello_world.py
web/: styles.css
web/js/: player-input.js
